server/src/preprocessor/LPCPreprocessorParser.ts
// Generated from grammar/LPCPreprocessorParser.g4 by ANTLR 4.13.1

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { LPCPreprocessorParserListener } from "./LPCPreprocessorParserListener.js";
import { LPCPreprocessorParserVisitor } from "./LPCPreprocessorParserVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class LPCPreprocessorParser extends antlr.Parser {
    public static readonly SHARP = 1;
    public static readonly CODE = 2;
    public static readonly INCLUDE = 3;
    public static readonly PRAGMA = 4;
    public static readonly DEFINE = 5;
    public static readonly DEFINED = 6;
    public static readonly IF = 7;
    public static readonly ELIF = 8;
    public static readonly ELSE = 9;
    public static readonly UNDEF = 10;
    public static readonly IFDEF = 11;
    public static readonly IFNDEF = 12;
    public static readonly ENDIF = 13;
    public static readonly BANG = 14;
    public static readonly LPAREN = 15;
    public static readonly RPAREN = 16;
    public static readonly EQUAL = 17;
    public static readonly NOTEQUAL = 18;
    public static readonly AND = 19;
    public static readonly OR = 20;
    public static readonly LT = 21;
    public static readonly GT = 22;
    public static readonly LE = 23;
    public static readonly GE = 24;
    public static readonly STAR = 25;
    public static readonly DIRECTIVE_WHITESPACES = 26;
    public static readonly DIRECTIVE_STRING = 27;
    public static readonly CONDITIONAL_SYMBOL = 28;
    public static readonly DECIMAL_LITERAL = 29;
    public static readonly FLOAT = 30;
    public static readonly NEW_LINE = 31;
    public static readonly DIRECITVE_COMMENT = 32;
    public static readonly DIRECITVE_LINE_COMMENT = 33;
    public static readonly DIRECITVE_NEW_LINE = 34;
    public static readonly DIRECITVE_TEXT_NEW_LINE = 35;
    public static readonly TEXT = 36;
    public static readonly SLASH = 37;
    public static readonly RULE_lpcDocument = 0;
    public static readonly RULE_text = 1;
    public static readonly RULE_code = 2;
    public static readonly RULE_directive = 3;
    public static readonly RULE_directive_text = 4;
    public static readonly RULE_preprocessor_expression = 5;

    public static readonly literalNames = [
        null, "'#'", null, null, "'pragma'", null, "'defined'", "'if'", 
        "'elif'", "'else'", "'undef'", "'ifdef'", "'ifndef'", "'endif'", 
        "'!'", "'('", "')'", "'=='", "'!='", "'&&'", "'||'", "'<'", "'>'", 
        "'<='", "'>='", "'*'"
    ];

    public static readonly symbolicNames = [
        null, "SHARP", "CODE", "INCLUDE", "PRAGMA", "DEFINE", "DEFINED", 
        "IF", "ELIF", "ELSE", "UNDEF", "IFDEF", "IFNDEF", "ENDIF", "BANG", 
        "LPAREN", "RPAREN", "EQUAL", "NOTEQUAL", "AND", "OR", "LT", "GT", 
        "LE", "GE", "STAR", "DIRECTIVE_WHITESPACES", "DIRECTIVE_STRING", 
        "CONDITIONAL_SYMBOL", "DECIMAL_LITERAL", "FLOAT", "NEW_LINE", "DIRECITVE_COMMENT", 
        "DIRECITVE_LINE_COMMENT", "DIRECITVE_NEW_LINE", "DIRECITVE_TEXT_NEW_LINE", 
        "TEXT", "SLASH"
    ];
    public static readonly ruleNames = [
        "lpcDocument", "text", "code", "directive", "directive_text", "preprocessor_expression",
    ];

    public get grammarFileName(): string { return "LPCPreprocessorParser.g4"; }
    public get literalNames(): (string | null)[] { return LPCPreprocessorParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return LPCPreprocessorParser.symbolicNames; }
    public get ruleNames(): string[] { return LPCPreprocessorParser.ruleNames; }
    public get serializedATN(): number[] { return LPCPreprocessorParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, LPCPreprocessorParser._ATN, LPCPreprocessorParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public lpcDocument(): LpcDocumentContext {
        let localContext = new LpcDocumentContext(this.context, this.state);
        this.enterRule(localContext, 0, LPCPreprocessorParser.RULE_lpcDocument);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 15;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 1 || _la === 2) {
                {
                {
                this.state = 12;
                this.text();
                }
                }
                this.state = 17;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 18;
            this.match(LPCPreprocessorParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public text(): TextContext {
        let localContext = new TextContext(this.context, this.state);
        this.enterRule(localContext, 2, LPCPreprocessorParser.RULE_text);
        let _la: number;
        try {
            this.state = 25;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case LPCPreprocessorParser.CODE:
                localContext = new CodeTextContext(localContext);
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 20;
                this.code();
                }
                break;
            case LPCPreprocessorParser.SHARP:
                localContext = new PreprocessorDirectiveContext(localContext);
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 21;
                this.match(LPCPreprocessorParser.SHARP);
                this.state = 22;
                this.directive();
                this.state = 23;
                _la = this.tokenStream.LA(1);
                if(!(_la === -1 || _la === 31)) {
                this.errorHandler.recoverInline(this);
                }
                else {
                    this.errorHandler.reportMatch(this);
                    this.consume();
                }
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public code(): CodeContext {
        let localContext = new CodeContext(this.context, this.state);
        this.enterRule(localContext, 4, LPCPreprocessorParser.RULE_code);
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 28;
            this.errorHandler.sync(this);
            alternative = 1;
            do {
                switch (alternative) {
                case 1:
                    {
                    {
                    this.state = 27;
                    this.match(LPCPreprocessorParser.CODE);
                    }
                    }
                    break;
                default:
                    throw new antlr.NoViableAltException(this);
                }
                this.state = 30;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 2, this.context);
            } while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public directive(): DirectiveContext {
        let localContext = new DirectiveContext(this.context, this.state);
        this.enterRule(localContext, 6, LPCPreprocessorParser.RULE_directive);
        let _la: number;
        try {
            this.state = 54;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case LPCPreprocessorParser.INCLUDE:
                localContext = new PreprocessorImportContext(localContext);
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 32;
                this.match(LPCPreprocessorParser.INCLUDE);
                this.state = 33;
                this.directive_text();
                }
                break;
            case LPCPreprocessorParser.IF:
                localContext = new PreprocessorConditionalContext(localContext);
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 34;
                this.match(LPCPreprocessorParser.IF);
                this.state = 35;
                this.preprocessor_expression(0);
                }
                break;
            case LPCPreprocessorParser.ELIF:
                localContext = new PreprocessorConditionalContext(localContext);
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 36;
                this.match(LPCPreprocessorParser.ELIF);
                this.state = 37;
                this.preprocessor_expression(0);
                }
                break;
            case LPCPreprocessorParser.ELSE:
                localContext = new PreprocessorConditionalElseContext(localContext);
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 38;
                this.match(LPCPreprocessorParser.ELSE);
                }
                break;
            case LPCPreprocessorParser.ENDIF:
                localContext = new PreprocessorConditionalEndContext(localContext);
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 39;
                this.match(LPCPreprocessorParser.ENDIF);
                this.state = 40;
                this.preprocessor_expression(0);
                }
                break;
            case LPCPreprocessorParser.IFDEF:
                localContext = new PreprocessorConditionalDefContext(localContext);
                this.enterOuterAlt(localContext, 6);
                {
                this.state = 41;
                this.match(LPCPreprocessorParser.IFDEF);
                this.state = 42;
                this.match(LPCPreprocessorParser.CONDITIONAL_SYMBOL);
                }
                break;
            case LPCPreprocessorParser.IFNDEF:
                localContext = new PreprocessorConditionalDefContext(localContext);
                this.enterOuterAlt(localContext, 7);
                {
                this.state = 43;
                this.match(LPCPreprocessorParser.IFNDEF);
                this.state = 44;
                this.match(LPCPreprocessorParser.CONDITIONAL_SYMBOL);
                }
                break;
            case LPCPreprocessorParser.UNDEF:
                localContext = new PreprocessorUndefContext(localContext);
                this.enterOuterAlt(localContext, 8);
                {
                this.state = 45;
                this.match(LPCPreprocessorParser.UNDEF);
                this.state = 46;
                this.match(LPCPreprocessorParser.CONDITIONAL_SYMBOL);
                }
                break;
            case LPCPreprocessorParser.PRAGMA:
                localContext = new PreprocessorPragmaContext(localContext);
                this.enterOuterAlt(localContext, 9);
                {
                this.state = 47;
                this.match(LPCPreprocessorParser.PRAGMA);
                this.state = 48;
                this.directive_text();
                }
                break;
            case LPCPreprocessorParser.DEFINE:
                localContext = new PreprocessorDefineContext(localContext);
                this.enterOuterAlt(localContext, 10);
                {
                this.state = 49;
                this.match(LPCPreprocessorParser.DEFINE);
                this.state = 50;
                this.match(LPCPreprocessorParser.CONDITIONAL_SYMBOL);
                this.state = 52;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 36) {
                    {
                    this.state = 51;
                    this.directive_text();
                    }
                }

                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public directive_text(): Directive_textContext {
        let localContext = new Directive_textContext(this.context, this.state);
        this.enterRule(localContext, 8, LPCPreprocessorParser.RULE_directive_text);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 57;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            do {
                {
                {
                this.state = 56;
                this.match(LPCPreprocessorParser.TEXT);
                }
                }
                this.state = 59;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            } while (_la === 36);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }

    public preprocessor_expression(): Preprocessor_expressionContext;
    public preprocessor_expression(_p: number): Preprocessor_expressionContext;
    public preprocessor_expression(_p?: number): Preprocessor_expressionContext {
        if (_p === undefined) {
            _p = 0;
        }

        let parentContext = this.context;
        let parentState = this.state;
        let localContext = new Preprocessor_expressionContext(this.context, parentState);
        let previousContext = localContext;
        let _startState = 10;
        this.enterRecursionRule(localContext, 10, LPCPreprocessorParser.RULE_preprocessor_expression, _p);
        let _la: number;
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 84;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case LPCPreprocessorParser.DECIMAL_LITERAL:
                {
                localContext = new PreprocessorConstantContext(localContext);
                this.context = localContext;
                previousContext = localContext;

                this.state = 62;
                this.match(LPCPreprocessorParser.DECIMAL_LITERAL);
                }
                break;
            case LPCPreprocessorParser.DIRECTIVE_STRING:
                {
                localContext = new PreprocessorConstantContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 63;
                this.match(LPCPreprocessorParser.DIRECTIVE_STRING);
                }
                break;
            case LPCPreprocessorParser.CONDITIONAL_SYMBOL:
                {
                localContext = new PreprocessorConditionalSymbolContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 64;
                this.match(LPCPreprocessorParser.CONDITIONAL_SYMBOL);
                this.state = 69;
                this.errorHandler.sync(this);
                switch (this.interpreter.adaptivePredict(this.tokenStream, 6, this.context) ) {
                case 1:
                    {
                    this.state = 65;
                    this.match(LPCPreprocessorParser.LPAREN);
                    this.state = 66;
                    this.preprocessor_expression(0);
                    this.state = 67;
                    this.match(LPCPreprocessorParser.RPAREN);
                    }
                    break;
                }
                }
                break;
            case LPCPreprocessorParser.LPAREN:
                {
                localContext = new PreprocessorParenthesisContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 71;
                this.match(LPCPreprocessorParser.LPAREN);
                this.state = 72;
                this.preprocessor_expression(0);
                this.state = 73;
                this.match(LPCPreprocessorParser.RPAREN);
                }
                break;
            case LPCPreprocessorParser.BANG:
                {
                localContext = new PreprocessorNotContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 75;
                this.match(LPCPreprocessorParser.BANG);
                this.state = 76;
                this.preprocessor_expression(6);
                }
                break;
            case LPCPreprocessorParser.DEFINED:
                {
                localContext = new PreprocessorDefinedContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 77;
                this.match(LPCPreprocessorParser.DEFINED);
                this.state = 82;
                this.errorHandler.sync(this);
                switch (this.tokenStream.LA(1)) {
                case LPCPreprocessorParser.CONDITIONAL_SYMBOL:
                    {
                    this.state = 78;
                    this.match(LPCPreprocessorParser.CONDITIONAL_SYMBOL);
                    }
                    break;
                case LPCPreprocessorParser.LPAREN:
                    {
                    this.state = 79;
                    this.match(LPCPreprocessorParser.LPAREN);
                    this.state = 80;
                    this.match(LPCPreprocessorParser.CONDITIONAL_SYMBOL);
                    this.state = 81;
                    this.match(LPCPreprocessorParser.RPAREN);
                    }
                    break;
                default:
                    throw new antlr.NoViableAltException(this);
                }
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
            this.context!.stop = this.tokenStream.LT(-1);
            this.state = 100;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 10, this.context);
            while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1) {
                    if (this.parseListeners != null) {
                        this.triggerExitRuleEvent();
                    }
                    previousContext = localContext;
                    {
                    this.state = 98;
                    this.errorHandler.sync(this);
                    switch (this.interpreter.adaptivePredict(this.tokenStream, 9, this.context) ) {
                    case 1:
                        {
                        localContext = new PreprocessorBinaryContext(new Preprocessor_expressionContext(parentContext, parentState));
                        this.pushNewRecursionContext(localContext, _startState, LPCPreprocessorParser.RULE_preprocessor_expression);
                        this.state = 86;
                        if (!(this.precpred(this.context, 5))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 5)");
                        }
                        this.state = 87;
                        (localContext as PreprocessorBinaryContext)._op = this.tokenStream.LT(1);
                        _la = this.tokenStream.LA(1);
                        if(!(_la === 17 || _la === 18)) {
                            (localContext as PreprocessorBinaryContext)._op = this.errorHandler.recoverInline(this);
                        }
                        else {
                            this.errorHandler.reportMatch(this);
                            this.consume();
                        }
                        this.state = 88;
                        this.preprocessor_expression(6);
                        }
                        break;
                    case 2:
                        {
                        localContext = new PreprocessorBinaryContext(new Preprocessor_expressionContext(parentContext, parentState));
                        this.pushNewRecursionContext(localContext, _startState, LPCPreprocessorParser.RULE_preprocessor_expression);
                        this.state = 89;
                        if (!(this.precpred(this.context, 4))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 4)");
                        }
                        this.state = 90;
                        (localContext as PreprocessorBinaryContext)._op = this.match(LPCPreprocessorParser.AND);
                        this.state = 91;
                        this.preprocessor_expression(5);
                        }
                        break;
                    case 3:
                        {
                        localContext = new PreprocessorBinaryContext(new Preprocessor_expressionContext(parentContext, parentState));
                        this.pushNewRecursionContext(localContext, _startState, LPCPreprocessorParser.RULE_preprocessor_expression);
                        this.state = 92;
                        if (!(this.precpred(this.context, 3))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 3)");
                        }
                        this.state = 93;
                        (localContext as PreprocessorBinaryContext)._op = this.match(LPCPreprocessorParser.OR);
                        this.state = 94;
                        this.preprocessor_expression(4);
                        }
                        break;
                    case 4:
                        {
                        localContext = new PreprocessorBinaryContext(new Preprocessor_expressionContext(parentContext, parentState));
                        this.pushNewRecursionContext(localContext, _startState, LPCPreprocessorParser.RULE_preprocessor_expression);
                        this.state = 95;
                        if (!(this.precpred(this.context, 2))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 2)");
                        }
                        this.state = 96;
                        (localContext as PreprocessorBinaryContext)._op = this.tokenStream.LT(1);
                        _la = this.tokenStream.LA(1);
                        if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 65011712) !== 0))) {
                            (localContext as PreprocessorBinaryContext)._op = this.errorHandler.recoverInline(this);
                        }
                        else {
                            this.errorHandler.reportMatch(this);
                            this.consume();
                        }
                        this.state = 97;
                        this.preprocessor_expression(3);
                        }
                        break;
                    }
                    }
                }
                this.state = 102;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 10, this.context);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.unrollRecursionContexts(parentContext);
        }
        return localContext;
    }

    public override sempred(localContext: antlr.ParserRuleContext | null, ruleIndex: number, predIndex: number): boolean {
        switch (ruleIndex) {
        case 5:
            return this.preprocessor_expression_sempred(localContext as Preprocessor_expressionContext, predIndex);
        }
        return true;
    }
    private preprocessor_expression_sempred(localContext: Preprocessor_expressionContext | null, predIndex: number): boolean {
        switch (predIndex) {
        case 0:
            return this.precpred(this.context, 5);
        case 1:
            return this.precpred(this.context, 4);
        case 2:
            return this.precpred(this.context, 3);
        case 3:
            return this.precpred(this.context, 2);
        }
        return true;
    }


    private static __ATN: antlr.ATN;
    public static get _ATN(): antlr.ATN {
        if (!LPCPreprocessorParser.__ATN) {
            LPCPreprocessorParser.__ATN = new antlr.ATNDeserializer().deserialize(LPCPreprocessorParser._serializedATN);
        }

        return LPCPreprocessorParser.__ATN;
    }


    private static readonly vocabulary = new antlr.Vocabulary(LPCPreprocessorParser.literalNames, LPCPreprocessorParser.symbolicNames, []);

    public override get vocabulary(): antlr.Vocabulary {
        return LPCPreprocessorParser.vocabulary;
    }

    private static readonly decisionsToDFA = LPCPreprocessorParser._ATN.decisionToState.map( (ds: antlr.DecisionState, index: number) => new antlr.DFA(ds, index) );
}

export class LpcDocumentContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public EOF(): antlr.TerminalNode {
        return this.getToken(LPCPreprocessorParser.EOF, 0)!;
    }
    public text(): TextContext[];
    public text(i: number): TextContext | null;
    public text(i?: number): TextContext[] | TextContext | null {
        if (i === undefined) {
            return this.getRuleContexts(TextContext);
        }

        return this.getRuleContext(i, TextContext);
    }
    public override get ruleIndex(): number {
        return LPCPreprocessorParser.RULE_lpcDocument;
    }
    public override enterRule(listener: LPCPreprocessorParserListener): void {
        if(listener.enterLpcDocument) {
             listener.enterLpcDocument(this);
        }
    }
    public override exitRule(listener: LPCPreprocessorParserListener): void {
        if(listener.exitLpcDocument) {
             listener.exitLpcDocument(this);
        }
    }
    public override accept<Result>(visitor: LPCPreprocessorParserVisitor<Result>): Result | null {
        if (visitor.visitLpcDocument) {
            return visitor.visitLpcDocument(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class TextContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public override get ruleIndex(): number {
        return LPCPreprocessorParser.RULE_text;
    }
    public override copyFrom(ctx: TextContext): void {
        super.copyFrom(ctx);
    }
}
export class PreprocessorDirectiveContext extends TextContext {
    public constructor(ctx: TextContext) {
        super(ctx.parent, ctx.invokingState);
        super.copyFrom(ctx);
    }
    public SHARP(): antlr.TerminalNode {
        return this.getToken(LPCPreprocessorParser.SHARP, 0)!;
    }
    public directive(): DirectiveContext {
        return this.getRuleContext(0, DirectiveContext)!;
    }
    public NEW_LINE(): antlr.TerminalNode | null {
        return this.getToken(LPCPreprocessorParser.NEW_LINE, 0);
    }
    public EOF(): antlr.TerminalNode | null {
        return this.getToken(LPCPreprocessorParser.EOF, 0);
    }
    public override enterRule(listener: LPCPreprocessorParserListener): void {
        if(listener.enterPreprocessorDirective) {
             listener.enterPreprocessorDirective(this);
        }
    }
    public override exitRule(listener: LPCPreprocessorParserListener): void {
        if(listener.exitPreprocessorDirective) {
             listener.exitPreprocessorDirective(this);
        }
    }
    public override accept<Result>(visitor: LPCPreprocessorParserVisitor<Result>): Result | null {
        if (visitor.visitPreprocessorDirective) {
            return visitor.visitPreprocessorDirective(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}
export class CodeTextContext extends TextContext {
    public constructor(ctx: TextContext) {
        super(ctx.parent, ctx.invokingState);
        super.copyFrom(ctx);
    }
    public code(): CodeContext {
        return this.getRuleContext(0, CodeContext)!;
    }
    public override enterRule(listener: LPCPreprocessorParserListener): void {
        if(listener.enterCodeText) {
             listener.enterCodeText(this);
        }
    }
    public override exitRule(listener: LPCPreprocessorParserListener): void {
        if(listener.exitCodeText) {
             listener.exitCodeText(this);
        }
    }
    public override accept<Result>(visitor: LPCPreprocessorParserVisitor<Result>): Result | null {
        if (visitor.visitCodeText) {
            return visitor.visitCodeText(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class CodeContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public CODE(): antlr.TerminalNode[];
    public CODE(i: number): antlr.TerminalNode | null;
    public CODE(i?: number): antlr.TerminalNode | null | antlr.TerminalNode[] {
    	if (i === undefined) {
    		return this.getTokens(LPCPreprocessorParser.CODE);
    	} else {
    		return this.getToken(LPCPreprocessorParser.CODE, i);
    	}
    }
    public override get ruleIndex(): number {
        return LPCPreprocessorParser.RULE_code;
    }
    public override enterRule(listener: LPCPreprocessorParserListener): void {
        if(listener.enterCode) {
             listener.enterCode(this);
        }
    }
    public override exitRule(listener: LPCPreprocessorParserListener): void {
        if(listener.exitCode) {
             listener.exitCode(this);
        }
    }
    public override accept<Result>(visitor: LPCPreprocessorParserVisitor<Result>): Result | null {
        if (visitor.visitCode) {
            return visitor.visitCode(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}

